...
  privacyPolicyPressed,
  EULPressed,
  navigateToLogin,
}: ScreenTypes.signupScreen) => {
  return (
    <SafeAreaView
      testID="Sign_up_screen"
      style={[styles.droidSafeArea, getFlipForRTLStyle()]}
    >
      <Header onPress={navigateToLogin} />

      <KeyboardAvoidingView
        style={styles.subView}
...
                />
              </View>
            )}
            {isDemographics && (
              <>
                <CustomInput
                  testID="first_name"
                  placeholder={i18n.t("FIRST_NAME_STRING")}
                  returnKeyType="next"
                  placeholderTextColor={APP_COLORS.COLOR_TEXT_PLACEHOLDER}
                  autoCapitalize={
                    appConfigs?.signupFields?.firstname?.autoCapitalize ||
                    "none"
...
                  onSubmitEditing={() => {
                    lastNameRef?.current?.focus();
                  }}
                />

                <CustomInput
                  testID="last_name"
                  placeholder={i18n.t("LAST_NAME_STRING")}
                  returnKeyType="next"
                  placeholderTextColor={APP_COLORS.COLOR_TEXT_PLACEHOLDER}
                  autoCapitalize={
                    appConfigs?.signupFields?.lastname?.autoCapitalize || "none"
                  }
...
                  }}
                />
              </>
            )}
            {isKeyValidationEnabled === true && type === "RegisterSuccess" ? (
              <CustomInput
                testID="email"
                ref={emailRef}
                value={keyValidationData?.email}
                disabled={true}
                returnKeyType="next"
                customStyle={[styles.input]}
                placeholder={i18n.t("EMAIL_STRING")}
...
                }}
                returnKeyType="next"
              />
            )}

            <CustomInput
              testID="password"
              placeholder={i18n.t("PASSWORD_STRING")}
              isPassword
              placeholderTextColor={APP_COLORS.COLOR_TEXT_PLACEHOLDER}
              // secureTextEntry={!showPassword}
              customStyle={[styles.input]}
              ref={passRef}
...
                confirmPasswordRef?.current?.focus();
              }}
              returnKeyType="next"
            />

            <CustomInput
              testID="confirm_password"
              placeholder={i18n.t("CONFIRM_PASSWORD_STRING")}
              isPassword
              placeholderTextColor={APP_COLORS.COLOR_TEXT_PLACEHOLDER}
              // secureTextEntry={!showConfirmPassword}
              customStyle={[styles.input]}
              showHide={appConfigs?.showPassword}
...
                <CustomText style={{ color: design.Border_Button_Text_Color }}>
                  {i18n.t("COUNTRY_OF_RESI_STRING")}
                </CustomText>
              )} */}
            <TouchableOpacity
              activeOpacity={1}
              testID="country_of_residence"
              onPress={() => toggleCountryModal(true)}
              style={auth_styles.selectCountryDropdown}
            >
              <CustomText
                numberOfLines={2}
                style={auth_styles.selectCountryDropdownText}
...
              </View>
            ) : null}
            <View
              style={[auth_styles.checkBoxParent, auth_styles.checkBoxsView]}
            >
              <CheckBox
                testID={"registerPP"}
                checked={isPrivacyPolicyAccepted}
                onPress={privacyPolicyPressed}
              />
              <CustomText
                //  isRTL={isRTL}
                style={auth_styles.checkBoxLabelText}
...
              >
                {i18n.t("PP_STRING")}
              </CustomText>
            </View>
            <View style={auth_styles.checkBoxParent}>
              <CheckBox
                testID={"registerEula"}
                checked={isEndUserLicenceAccepted}
                onPress={EULPressed}
              />
              <CustomText style={auth_styles.checkBoxLabelText}>
                {i18n.t("ACCEPT_STRING")}
              </CustomText>
...
                style={auth_styles.hyperLinkText}
              >
                {i18n.t("EULG_STRING")}
              </CustomText>
            </View>
            <BorderButton
              testID="register"
              style={auth_styles.btn}
              onPress={handleRegisterButton}
              title={i18n.t("REGISTER_STRING")}
            />
            <CustomText style={[auth_styles.registerTopText]}>
              {i18n.t("ALREADY_HAVE_ACCOUNT") + " "}
...
