...
  hideResetModal,
  handleSkipMode,
  changedMindCallback,
  handleForceLogin,
}: ScreenTypes.loginScreen) => {
  return (
    <SafeAreaView style={globalStyles.droidSafeArea} testID="loginScreen">
      <ResetPasswordSuccessModal
        isVisible={showDoneMessage}
        dataString={doneMessage}
        hide={hideResetModal}
      />

...
              </CustomText>
            </View>
            <View style={styles.formContainer}>
              {isKeyValidationEnabled === true &&
              type === "LoginSuccess" ? null : (
                <CustomInput
                  testID={"loginEmail"}
                  keyboardType={"email-address"}
                  placeholder={
                    appConfigs?.autoCapitalize == "characters"
                      ? i18n.t("EMAIL_STRING")?.toUpperCase()
                      : i18n.t("EMAIL_STRING")
                  }
...
            </TouchableOpacity>
            <View style={styles.sigupTextView}>
              <CustomText style={[auth_styles.registerTopText]}>
                {i18n.t("DONT_HAVE_ACCOUNT")}
              </CustomText>
              <TouchableOpacity
                testID={"moveToSignup"}
                onPress={() => navigation.navigate("CIFID")}
              >
                <CustomText style={[auth_styles.signUpText]}>
                  {i18n.t("SIGN_UP")}
                </CustomText>
              </TouchableOpacity>
...
