...
    props;

  return (
    <Modal isVisible={isVisible} style={styles.mainView}>
      <View
        style={[styles.centeredView, getFlipForRTLStyle()]}
        testID={"continue_modal"}
      >
        <View style={styles.modalView}>
          <Text style={styles.outletTitle}>{outletName}</Text>

          <Text style={styles.modalText}>
            {i18n.t(
...
              }}
              style={styles.buttonParentChildLeft}
            >
              <Text style={styles.buttonText}>{i18n.t("Change_Outlet")}</Text>
            </TouchableOpacity>
            <TouchableOpacity
              testID={"select_continue"}
              activeOpacity={1}
              onPress={() => {
                continueWithCurrentOutlet();
              }}
              style={styles.buttonParentChildRight}
            >
...
