...
      {open &&
        item.data.map((i: any) => (
          <TouchableOpacity
            onPress={() => {
              onClickLocationHandler(i);
            }}
            testID={"select_location_item"}
            style={styles.item}
          >
            <View style={styles.itemSubView}>
              <Image source={allFlags[i?.shortname]} style={styles.flag} />
              <CustomText style={styles.title}>{i.name}</CustomText>
            </View>
...
